--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
 spec/dummy/tmp/
 spec/dummy/.sass-cache
-rocket_job_mission_control-0.1.gem
+*.gem
 /nbproject/private/
