--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,18 @@ bundler_args: --without development
 rvm:
   - 2.0
   - 2.2
+  - 2.3
   - jruby-1.7
-  - jruby-9.0.0.0
-  - rbx
+  - jruby-9
 
 services:
   - mongodb
+
+# Gitter integration
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/4d6749e48eb60321640e
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
