--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 bundler_args: --without development --jobs 3 --retry 3
 
 gemfile:
+  - gemfiles/rails4_0.gemfile
   - gemfiles/rails4_1.gemfile
   - gemfiles/rails4_2.gemfile
   - gemfiles/rails5_0.gemfile
@@ -16,8 +17,8 @@ matrix:
   exclude:
     - rvm: 2.1.8
       gemfile: gemfiles/rails5_0.gemfile
-allow_failures:
-  - gemfile: gemfiles/rails5_0.gemfile
+  allow_failures:
+    - gemfile: gemfiles/rails5_0.gemfile
 
 services:
   - mongodb
