--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,24 @@ rvm:
   - 2.1.10
   - 2.2.5
   - 2.3.1
-  - jruby-1.7.23
-  - jruby-9.0.5.0
+  - jruby-9.1.5.0
 
 # Patch for RSpec to work with multiple Gemfiles
 before_script:
   - rm Gemfile
+  - jruby-9.1.5.0
 
 matrix:
   exclude:
     - rvm: 2.1.10
       gemfile: gemfiles/rails5_0.gemfile
-    - rvm: jruby-1.7.23
-      gemfile: gemfiles/rails5_0.gemfile
-    - rvm: jruby-9.0.5.0
-      gemfile: gemfiles/rails5_0.gemfile
+
+bundler_args: --without development
 
 services:
   - mongodb
+
+sudo: false
 
 # Gitter integration
 notifications:
