--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
   exclude:
     - rvm: 2.1.10
       gemfile: gemfiles/rails5_0.gemfile
+    - rvm: jruby-9.1.5.0
+      gemfile: gemfiles/rails5_0.gemfile
 
 bundler_args: --without development
 
