Replace Dummy rails app with usable standalone rails app

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 .bundle/
-log/*.log
+*.log
 pkg/
-spec/dummy/db/*.sqlite3
-spec/dummy/db/*.sqlite3-journal
-spec/dummy/log/*.log
-spec/dummy/tmp/
-spec/dummy/.sass-cache
+rjmc/tmp/
+rjmc/.sass-cache
 *.gem
 /.idea
 tags
