--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -3,6 +3,6 @@ source 'https://rubygems.org'
 gem 'awesome_print'
 gem 'puma'
 gem 'rails', '~> 5.0'
-gem 'rails_semantic_logger'
+gem 'rails_semantic_logger', '>= 4.0.0.rc1'
 
 gem 'rocketjob_mission_control', path: '../'
