Use Appraisal to manage gemfiles

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 
 gemfile:
-  - gemfiles/rails4_1.gemfile
-  - gemfiles/rails4_2.gemfile
-  - gemfiles/rails5_0.gemfile
+  - gemfiles/rails_4.1.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
 
 rvm:
   - 2.1.10
@@ -15,13 +15,13 @@ rvm:
 matrix:
   exclude:
     - rvm: 2.1.10
-      gemfile: gemfiles/rails5_0.gemfile
+      gemfile: gemfiles/rails_5.0.gemfile
     - rvm: jruby-9.1.7.0
-      gemfile: gemfiles/rails5_0.gemfile
+      gemfile: gemfiles/rails_5.0.gemfile
 #    - rvm: 2.4.1
-#      gemfile: gemfiles/rails4_1.gemfile
+#      gemfile: gemfiles/rails_4.1.gemfile
 #    - rvm: 2.4.1
-#      gemfile: gemfiles/rails4_2.gemfile
+#      gemfile: gemfiles/rails_4.2.gemfile
 
 notifications:
   email: false
