--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -2,7 +2,10 @@ source 'https://rubygems.org'
 
 gem 'awesome_print'
 gem 'puma'
-gem 'rails', '~> 5.0'
-gem 'rails_semantic_logger', '>= 4.0.0.rc1'
+gem 'rails', '~> 4.0'
+gem 'rails_semantic_logger', '>= 4.0.0'
 
 gem 'rocketjob_mission_control', path: '../'
+
+# Comment out the line below if not running RocketJob Pro
+gem 'rocketjob_pro', path: '../../rocketjob_pro'
