--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,24 @@
 language: ruby
 
 gemfile:
-  - gemfiles/rails_4.1.gemfile
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
 
 rvm:
   - 2.1.10
-  - 2.2.6
-  - 2.3.3
-#  - 2.4.1
-  - jruby-9.1.7.0
+  - 2.2.7
+  - 2.3.4
+  - 2.4.1
+  - jruby-9.1.8.0
 
 matrix:
   exclude:
     - rvm: 2.1.10
       gemfile: gemfiles/rails_5.0.gemfile
-    - rvm: jruby-9.1.7.0
+    - rvm: jruby-9.1.8.0
       gemfile: gemfiles/rails_5.0.gemfile
-#    - rvm: 2.4.1
-#      gemfile: gemfiles/rails_4.1.gemfile
-#    - rvm: 2.4.1
-#      gemfile: gemfiles/rails_4.2.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails_4.2.gemfile
 
 notifications:
   email: false
