Add db:seeds and testing documentation.
Add colors for sleeping jobs.

--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -7,6 +7,10 @@ gem 'rails_semantic_logger', '>= 4.0.0'
 
 gem 'rocketjob_mission_control', path: '../'
 
-# For local testing
+# For testing with local copies of the gems:
 #gem 'rocketjob', path: '../../rocketjob'
 #gem 'rocketjob_pro', path: '../../rocketjob_pro'
+
+# For high availability
+gem 'mongo', git: 'https://github.com/mongodb/mongo-ruby-driver.git'
+gem 'mongo_ha', git: 'https://github.com/reidmorrison/mongo_ha.git'
