Update config file

--- a/rjmc/config/mongoid.yml
+++ b/rjmc/config/mongoid.yml
@@ -38,7 +38,7 @@ mongoid_options: &mongoid_options
 development:
   clients:
     default: &default_development
-      uri: mongodb://localhost:27017/rocketjob_development
+      uri: mongodb://127.0.0.1:27017/rocketjob_development
       options:
         <<: *client_options
         write:
@@ -55,7 +55,7 @@ development:
 test:
   clients:
     default: &default_test
-      uri: mongodb://localhost:27017/rocketjob_test
+      uri: mongodb://127.0.0.1:27017/rocketjob_test
       options:
         <<: *client_options
         write:
