--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,29 @@ language: ruby
 gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5.2.gemfile
 
 rvm:
-  - 2.1.10
-  - 2.2.7
-  - 2.3.4
-  - 2.4.1
-  - jruby-9.1.8.0
+  - 2.3.6
+  - 2.4.3
+  - 2.5.0
+  - 2.6.0-preview1
+  - jruby-9.1.17.0
 
 jdk:
   - oraclejdk8
 
 matrix:
   exclude:
-    - rvm: 2.1.10
-      gemfile: gemfiles/rails_5.0.gemfile
-    - rvm: jruby-9.1.8.0
-      gemfile: gemfiles/rails_5.0.gemfile
-    - rvm: 2.4.1
+    - rvm: 2.4.3
       gemfile: gemfiles/rails_4.2.gemfile
+    - rvm: 2.5.0
+      gemfile: gemfiles/rails_4.2.gemfile
+    - rvm: 2.6.0-preview1
+      gemfile: gemfiles/rails_4.2.gemfile
+  allow_failures:
+    - rvm: 2.6.0-preview1
+    - rvm: jruby-9.1.17.0
 
 notifications:
   email: false
