--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -1,16 +1,64 @@
 source 'https://rubygems.org'
+git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-gem 'rails', '~> 4'
-gem 'rails_semantic_logger', '>= 4.0.0'
-gem 'puma'
+gem 'rails', '~> 5.2.0'
+gem 'rails_semantic_logger', '>= 4.0.0' #, path: '../../rails_semantic_logger'
+gem 'puma', '~> 3.11'
 gem 'awesome_print'
-
 gem 'rocketjob_mission_control', path: '../'
 
 # For testing with local copies of the gems:
 #gem 'rocketjob', path: '../../rocketjob'
 #gem 'rocketjob_pro', path: '../../rocketjob_pro'
+#gem 'mongoid', path: '../../mongoid'
 
 # For high availability
-gem 'mongo', git: 'https://github.com/mongodb/mongo-ruby-driver.git'
-gem 'mongo_ha', git: 'https://github.com/reidmorrison/mongo_ha.git'
+gem 'mongo_ha', '~> 2.5.1'
+
+# Use SCSS for stylesheets
+gem 'sass-rails', '~> 5.0'
+# Use Uglifier as compressor for JavaScript assets
+gem 'uglifier', '>= 1.3.0'
+# See https://github.com/rails/execjs#readme for more supported runtimes
+# gem 'mini_racer', platforms: :ruby
+# Use CoffeeScript for .coffee assets and views
+gem 'coffee-rails', '~> 4.2'
+# Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
+gem 'turbolinks', '~> 5'
+# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
+gem 'jbuilder', '~> 2.5'
+# Use Redis adapter to run Action Cable in production
+# gem 'redis', '~> 4.0'
+# Use ActiveModel has_secure_password
+# gem 'bcrypt', '~> 3.1.7'
+
+# Use Capistrano for deployment
+# gem 'capistrano-rails', group: :development
+
+# Reduces boot times through caching; required in config/boot.rb
+#gem 'bootsnap', '>= 1.1.0', require: false
+
+group :development, :test do
+  # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+end
+
+group :development do
+  # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
+  gem 'web-console', '>= 3.3.0'
+  gem 'listen', '>= 3.0.5', '< 3.2'
+  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
+  # gem 'spring'
+  # gem 'spring-watcher-listen', '~> 2.0.0'
+end
+
+# group :test do
+#   # Adds support for Capybara system testing and selenium driver
+#   gem 'capybara', '>= 2.15', '< 4.0'
+#   gem 'selenium-webdriver'
+#   # Easy installation and use of chromedriver to run system tests with Chrome
+#   gem 'chromedriver-helper'
+# end
+
+# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
