--- a/rjmc4/Gemfile
+++ b/rjmc4/Gemfile
@@ -1,7 +1,8 @@
 source 'https://rubygems.org'
 
-gem 'rails', '~> 4'
+gem 'rails', '~> 4.2.0'
 gem 'rails_semantic_logger', '>= 4.0.0'
+gem 'mongo_ha', '~> 2.5.1'
 gem 'puma'
 gem 'awesome_print'
 
@@ -10,7 +11,3 @@ gem 'rocketjob_mission_control', path: '../'
 # For testing with local copies of the gems:
 #gem 'rocketjob', path: '../../rocketjob'
 #gem 'rocketjob_pro', path: '../../rocketjob_pro'
-
-# For high availability
-gem 'mongo', git: 'https://github.com/mongodb/mongo-ruby-driver.git'
-gem 'mongo_ha', git: 'https://github.com/reidmorrison/mongo_ha.git'
