--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -8,8 +8,9 @@ gem 'awesome_print'
 gem 'rocketjob_mission_control', path: '../'
 
 # For testing with local copies of the gems:
-#gem 'rocketjob', path: '../../rocketjob'
-#gem 'rocketjob_pro', path: '../../rocketjob_pro'
+gem 'rocketjob', path: '../../rocketjob'
+gem 'rocketjob_enterprise', path: '../../rocketjob_enterprise'
+gem 'iostreams', path: '../../iostreams'
 #gem 'mongoid', path: '../../mongoid'
 
 # For high availability
