--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -2,19 +2,18 @@ source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 gem 'rails', '~> 5.2.0'
-gem 'rails_semantic_logger', '>= 4.0.0' #, path: '../../rails_semantic_logger'
+gem 'rails_semantic_logger', '>= 4.3'
 gem 'puma', '~> 3.11'
 gem 'awesome_print'
 gem 'rocketjob_mission_control', path: '../'
 
 # For testing with local copies of the gems:
-gem 'rocketjob', path: '../../rocketjob'
-gem 'rocketjob_enterprise', path: '../../rocketjob_enterprise'
-gem 'iostreams', path: '../../iostreams'
-#gem 'mongoid', path: '../../mongoid'
+# gem 'rocketjob', path: '../../rocketjob'
+# gem 'rocketjob_enterprise', path: '../../rocketjob_enterprise'
+# gem 'iostreams', path: '../../iostreams'
 
 # For high availability
-gem 'mongo_ha', '~> 2.5.1'
+gem 'mongo_ha', '~> 2.6'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
