--- a/rjmc4/Gemfile
+++ b/rjmc4/Gemfile
@@ -1,8 +1,8 @@
 source 'https://rubygems.org'
 
 gem 'rails', '~> 4.2.0'
-gem 'rails_semantic_logger', '>= 4.0.0'
-gem 'mongo_ha', '~> 2.5.1'
+gem 'rails_semantic_logger', '~> 4.0'
+gem 'mongo_ha', '~> 2.6'
 gem 'puma'
 gem 'awesome_print'
 
