--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,26 @@
 language: ruby
 
-gemfile:
-  - gemfiles/rails_4.2.gemfile
-  - gemfiles/rails_5.2.gemfile
-
-rvm:
-  - 2.3.8
-  - 2.4.5
-  - 2.5.3
-  - 2.6.1
-  - jruby-9.2.5.0
-
 matrix:
-  exclude:
-    - rvm: 2.4.5
+  include:
+    - name: "Rails 4.2 on Ruby 2.3.8"
+      rvm: 2.3.8
       gemfile: gemfiles/rails_4.2.gemfile
-    - rvm: 2.5.3
-      gemfile: gemfiles/rails_4.2.gemfile
-    - rvm: 2.6.1
-      gemfile: gemfiles/rails_4.2.gemfile
-    - rvm: jruby-9.2.5.0
-      gemfile: gemfiles/rails_4.2.gemfile
+
+    - name: "Rails 5.2 on Ruby 2.4.5"
+      rvm: 2.4.5
+      gemfile: gemfiles/rails_5.2.gemfile
+    - name: "Rails 5.2 on Ruby 2.5.3"
+      rvm: 2.5.3
+      gemfile: gemfiles/rails_5.2.gemfile
+    - name: "Rails 5.2 on Ruby 2.6.2"
+      rvm: 2.6.2
+      gemfile: gemfiles/rails_5.2.gemfile
+    - name: "Rails 5.2 on JRuby 9.2.6.0"
+      rvm: jruby-9.2.6.0
+      gemfile: gemfiles/rails_5.2.gemfile
+
   allow_failures:
-    - rvm: jruby-9.2.5.0
+    - rvm: jruby-9.2.6.0
 
 jdk:
   - openjdk10
