--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-gem "awesome_print"
+gem "amazing_print"
 gem "puma", "~> 3.11"
 gem "rails", "~> 6.0.0"
 gem "rails_semantic_logger", ">= 4.3"
