--- a/.travis.yml
+++ b/.travis.yml
@@ -2,44 +2,47 @@ language: ruby
 
 matrix:
   include:
-    - name: "Rails 5.2 on Ruby 2.4.10"
-      rvm: 2.4.10
-      gemfile: gemfiles/rails_5.2.gemfile
     - name: "Rails 5.2 on Ruby 2.5.8"
       rvm: 2.5.8
       gemfile: gemfiles/rails_5.2.gemfile
+
     - name: "Rails 5.2 on Ruby 2.6.6"
       rvm: 2.6.6
-      gemfile: gemfiles/rails_5.2.gemfile
-    - name: "Rails 5.2 on JRuby 9.2.11.1"
-      rvm: jruby-9.2.11.1
       gemfile: gemfiles/rails_5.2.gemfile
     - name: "Rails 6.0 on Ruby 2.6.6"
       rvm: 2.6.6
       gemfile: gemfiles/rails_6.0.gemfile
-    - name: "Rails 6.0 on JRuby 9.2.11.1"
-      rvm: jruby-9.2.11.1
+
+    - name: "Rails 6.0 on Ruby 2.7.2"
+      rvm: 2.7.2
       gemfile: gemfiles/rails_6.0.gemfile
+    - name: "Rails 6.1 on Ruby 2.7.2"
+      rvm: 2.7.2
+      gemfile: gemfiles/rails_6.1.gemfile
+
+    - name: "Rails 6.1 on Ruby 3.0.0"
+      rvm: 3.0.0
+      gemfile: gemfiles/rails_6.1.gemfile
+
+    - name: "Rails 5.2 on JRuby 9.2.14.0"
+      rvm: jruby-9.2.14.0
+      gemfile: gemfiles/rails_5.2.gemfile
+    - name: "Rails 6.0 on JRuby 9.2.14.0"
+      rvm: jruby-9.2.14.0
+      gemfile: gemfiles/rails_6.0.gemfile
+    - name: "Rails 6.1 on JRuby 9.2.14.0"
+      rvm: jruby-9.2.14.0
+      gemfile: gemfiles/rails_6.1.gemfile
 
   allow_failures:
-    - rvm: jruby-9.2.11.1
+    - rvm: jruby-9.2.14.0
     - gemfile: gemfiles/rails_6.0.gemfile
+    - gemfile: gemfiles/rails_6.1.gemfile
 
 jdk:
-  - openjdk10
-
-bundler_args: --without development
+  - openjdk9
 
 services:
   - mongodb
 
 sudo: false
-
-# Gitter integration
-notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/4d6749e48eb60321640e
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
