--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -2,32 +2,22 @@ source "https://rubygems.org"
 
 gem "amazing_print"
 gem "puma", "~> 3.11"
-gem "rails", "~> 6.0.0"
+gem "rails", "~> 6.1.0"
 gem "rails_semantic_logger", ">= 4.3"
 gem "rocketjob_mission_control", path: "../"
 
 # For testing with local copies of the gems:
-# gem 'rocketjob', path: '../../rocketjob'
+gem 'rocketjob', path: '../../rocketjob'
 # gem 'iostreams', path: '../../iostreams'
 
-# Use SCSS for stylesheets
-gem "sass-rails", "~> 5.0"
-# Use Uglifier as compressor for JavaScript assets
 gem "uglifier", ">= 1.3.0"
-# See https://github.com/rails/execjs#readme for more supported runtimes
-# gem 'mini_racer', platforms: :ruby
-# Use CoffeeScript for .coffee assets and views
 gem "coffee-rails", "~> 4.2"
-# Turbolinks makes navigating your web application faster. Read more: https://github.com/turbolinks/turbolinks
 gem "turbolinks", "~> 5"
-# Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem "jbuilder", "~> 2.5"
 
 group :development do
-  # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
   gem "listen", ">= 3.0.5", "< 3.2"
   gem "web-console", ">= 3.3.0"
 end
 
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[mingw mswin x64_mingw jruby]
