--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -7,7 +7,7 @@ gem "rails_semantic_logger", ">= 4.3"
 gem "rocketjob_mission_control", path: "../"
 
 # For testing with local copies of the gems:
-gem 'rocketjob', path: '../../rocketjob'
+# gem 'rocketjob', path: '../../rocketjob'
 # gem 'iostreams', path: '../../iostreams'
 
 gem "uglifier", ">= 1.3.0"
