Get tests passing

--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
 gem "amazing_print"
-gem "puma", "~> 3.11"
+gem "puma"
 gem "rails", "~> 6.1.0"
 gem "rails_semantic_logger", ">= 4.3"
 gem "rocketjob_mission_control", path: "../"
