Organize JS, Convert Datatables to webpacker

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,7 +1,7 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: app/javascript
+  source_path: app/client
   source_entry_path: packs
   public_root_path: public
   public_output_path: rocketjob-mission-control-packs
@@ -71,7 +71,6 @@ development:
       'Access-Control-Allow-Origin': '*'
     watch_options:
       ignored: '**/node_modules/**'
-
 
 test:
   <<: *default
