--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "bootstrap": "^5.0.1",
+    "datatables.net": "^1.10.25",
+    "datatables.net-bs4": "^1.10.25",
+    "datatables.net-buttons-bs4": "^1.7.1",
+    "datatables.net-fixedheader": "^3.1.9",
+    "datatables.net-responsive": "^2.2.9",
+    "datatables.net-select": "^1.3.3",
+    "feather-icons": "^4.28.0",
+    "jquery": "^3.6.0",
+    "script-loader": "^0.7.2",
+    "selectize": "^0.12.6",
+    "simplebar": "^5.3.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "css-loader": "^5.0.0",
+    "expose-loader": "^1.0.1",
+    "imports-loader": "^1.2.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
