--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -5,9 +5,10 @@ gem "puma"
 gem "rails", "~> 6.1.0"
 gem "rails_semantic_logger", ">= 4.3"
 gem "rocketjob_mission_control", path: "../"
+gem "rails_same_site_cookie"
 
 # For testing with local copies of the gems:
-gem "rocketjob", path: "../../rocketjob"
+# gem "rocketjob", path: "../../rocketjob"
 # gem "iostreams", path: "../../iostreams"
 
 gem "uglifier", ">= 1.3.0"
