--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,21 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - rails: 5.2
-            ruby: 2.5
-          - rails: 5.2
-            ruby: 2.6
-
-          - rails: "6.0"
-            ruby: 2.6
           - rails: "6.0"
             ruby: 2.7
-          - rails: "6.0"
-            ruby: "3.0"
-
           - rails: "6.1"
             ruby: "3.0"
-
+          - rails: "7.0"
+            ruby: 3.1
+          - mongoid: "7.1"
+            ruby: 3.2
     env:
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
       DISPLAY: ":99.0"
