--- a/rjmc/Gemfile
+++ b/rjmc/Gemfile
@@ -2,22 +2,20 @@ source "https://rubygems.org"
 
 gem "amazing_print"
 gem "puma"
-gem "rails", "~> 6.1.0"
-gem "rails_semantic_logger", ">= 4.3"
+gem "rails", "~> 7.1.0"
+gem "sprockets-rails"
+
+gem "rails_semantic_logger"
 gem "rocketjob_mission_control", path: "../"
 
-# For testing with local copies of the gems:
-# gem 'rocketjob', path: '../../rocketjob'
-# gem 'iostreams', path: '../../iostreams'
-
-gem "uglifier", ">= 1.3.0"
-gem "coffee-rails", "~> 4.2"
-gem "turbolinks", "~> 5"
-gem "jbuilder", "~> 2.5"
+# gem "uglifier", ">= 1.3.0"
+# gem "coffee-rails", "~> 4.2"
+# gem "turbolinks", "~> 5"
+# gem "jbuilder", "~> 2.5"
 
 group :development do
-  gem "listen", ">= 3.0.5", "< 3.2"
-  gem "web-console", ">= 3.3.0"
+  gem "listen"
+  gem "web-console"
 end
 
 gem "tzinfo-data", platforms: %i[mingw mswin x64_mingw jruby]
